--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jesujoba Alabi"
 title_separator          : "-"
 name                     : &name "Jesujoba O. Alabi"
-description              : &description "personal description"
+description              : &description "Jesujoba Oluwadara Alabi"
 url                      : https://ajesujoba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ajesujoba/ajesujoba.github.io"
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "I am a masters in Computer Science student at Saarland University"
   location         : "Saarbrücken"
-  employer         : "German Research Center for Artificial Intelligence DFKI"
+  employer         : "DFKI GmBh"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=vhBQlm8AAAAJ&hl=en"
   email            : "alabijesujoba@gmail.com"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "www.linkedin.com/in/alabi-jesujoba-oluwadara"
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : "https://stackoverflow.com/users/4932296/jesujoba-alabi"
