--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jesujoba Oluwadara Alabi"
-  avatar           : "profile.png"
+  avatar           : "IMG_2510.jpg"
   bio              : "I am a masters in Computer Science student at Saarland University"
   location         : "Saarbrücken"
   employer         : "DFKI GmBh"
