--- a/_config.yml
+++ b/_config.yml
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/ajesujoba"
+  github           : "ajesujoba"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "www.linkedin.com/in/alabi-jesujoba-oluwadara"
+  linkedin         : "alabi-jesujoba-oluwadara"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/4932296/jesujoba-alabi"
+  stackoverflow    : "4932296/jesujoba-alabi"
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/alabi_jesujoba"
+  twitter          : "alabi_jesujoba"
   vine             :
   weibo            :
   xing             :
