--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jesujoba Alabi"
 title_separator          : "-"
 name                     : &name "Jesujoba O. Alabi"
-description              : &description "Jesujoba Oluwadara Alabi"
+description              : &description "I am Jesujoba Oluwadara Alabi, a Nigerian from the Yoruba race with interest in NLP, Machine Learning and Machine Translation "
 url                      : https://ajesujoba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ajesujoba/ajesujoba.github.io"
