--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "IMG_2510.jpg"
   bio              : "I am a masters in Computer Science student at Saarland University"
   location         : "Saarbrücken"
-  employer         : "DFKI GmBh"
+  employer         : "MPI-INF"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=vhBQlm8AAAAJ&hl=en"
   email            : "alabijesujoba@gmail.com"
