--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jesujoba Oluwadara Alabi"
   avatar           : "IMG_2510.jpg"
-  bio              : "I am a masters in Computer Science student at Saarland University"
+  bio              : "I am a research intern at the Max Planck Institute for Informatics"
   location         : "Saarbrücken"
   employer         : "MPI-INF"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
