--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Jesujoba Oluwadara Alabi"
   avatar           : "IMG_2510.jpg"
-  bio              : "I am a research intern at the Max Planck Institute for Informatics"
-  location         : "Saarbrücken"
-  employer         : "MPI-INF"
+  bio              : "I am a research engineer at the Inria Paris' NLP research team"
+  location         : "Paris"
+  employer         : "INRIA"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=vhBQlm8AAAAJ&hl=en"
   email            : "alabijesujoba@gmail.com"
