--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "David Ifeoluwa Adelani"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "David Ifeoluwa Adelani"
-description              : &description "A research fellow or DeepMind academic fellow at University College London"
-url                      : https://https://dadelani.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Your Name"
+description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dadelani/dadelani.github.io/"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,14 +80,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "David Ifeoluwa Adelani"
-  avatar           : "DavidAdelani.jpg"
-  bio              : "DeepMind Academic Fellow at University College London"
-  location         : "London, United Kingdom"
+  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
   employer         :
-  googlescholar    : "https://scholar.google.ca/citations?user=W9sTkS0AAAAJ&hl=en"
-  email            : "d.adelani@ucl.ac.uk"
-  researchgate     : "https://www.researchgate.net/profile/David-Adelani"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "http://yourfullgooglescholarurl.com"
+  email            :
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
@@ -95,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/dadelani/"
+  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/david-ifeoluwa-adelani-7557b337/"
-  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-0193-2083"
+  linkedin         :
+  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/davlanade"
+  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
