--- a/_config.yml
+++ b/_config.yml
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/dadelani"
+  github           : "dadelani"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/david-ifeoluwa-adelani-7557b337/"
+  linkedin         : "david-ifeoluwa-adelani-7557b337/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/davlanade"
+  twitter          : "davlanade"
   vine             :
   weibo            :
   xing             :
