--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "David Ifeoluwa Adelani"
-  avatar           : "DavidAdelani.jpg"
+  avatar           : "DavidAdelani_small.png"
   bio              : "A DeepMind Research Fellow at University College London"
   location         : "London, United Kingdom"
   employer         :
