--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jesujoba Oluwadara Alabi"
-  avatar           : "IMG_2510.jpg"
+  avatar           : "IMG_4757.jpeg"
   bio              : "I am a Ph.D. student and researcher at the Spoken Language Systems (LSV) group, Saarland University"
   location         : "Saarbrücken"
   employer         : "Saarland University"
