--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "David Ifeoluwa Adelani"
 title_separator          : "-"
 name                     : &name "David Ifeoluwa Adelani"
-description              : &description "DeepMind Research Fellow at University College London"
+description              : &description "An Assistant Professor at McGill University"
 url                      : https://dadelani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dadelani/dadelani.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "David Ifeoluwa Adelani"
   avatar           : "DavidAdelani_small.png"
-  bio              : "A DeepMind Research Fellow at University College London"
-  location         : "London, United Kingdom"
+  bio              : "An Assistant Professor at McGill University, Canada "
+  location         : "Montreal, Canada"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=david+adelani"
   googlescholar    : "https://scholar.google.ca/citations?user=W9sTkS0AAAAJ&hl=en"
