--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=david+adelani"
   googlescholar    : "https://scholar.google.ca/citations?user=W9sTkS0AAAAJ&hl=en"
-  email            : "david.adelani@mcgill.ca"
+  email            : "david.adelani@mila.quebec"
   researchgate     : "https://www.researchgate.net/profile/David-Adelani"
   uri              :
   bitbucket        :
