--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,10 @@ main:
   - title: "Teaching"
     url: /teaching/
 
+  - title: "Datasets"
+    url: /datasets/
+ 
+
   - title: "Talks"
     url: /talks/    
 
