--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "David Ifeoluwa Adelani"
-  avatar           : "david_headshot.png"
+  avatar           : "DavidAdelani.png"
   bio              : "An Assistant Professor at McGill University, Canada "
   location         : "Montreal, Canada"
   employer         :
