--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /teaching/
 
   - title: "Datasets"
-    url: /datasets.md
+    url: /portfolio/
  
   - title: "Talks"
     url: /talks/    
